--- a/src/Components/FloatingDiv/FloatingDiv.css
+++ b/src/Components/FloatingDiv/FloatingDiv.css
@@ -13,7 +13,7 @@
     transform: scale(0.4);
 }
 .floatingdiv>span{
-    font-family: sans-serif;
+    font-family: Gill Sans MT, Calibri, sans-serif;
     font-size: 16px;
     color: black;
 }
