--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -107,6 +107,14 @@
     display: none;
   }
   .floating-div:nth-of-type(1) {
-    top: -7rem !important;
+    top: -8rem !important;
+  }
+  .i-right > :nth-child(1) {
+    left: -4rem;
+    top: -2rem;
+  }
+  .i-right > :nth-child(2) {
+    left: -5rem;
+    top: -5.2rem;
   }
 }
