--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -92,7 +92,8 @@ textarea {
   }
 
   .c-right > form {
-    margin-top: 2rem; /* Add margin to the top of the form */
+    margin-top: 6rem;
+    margin-bottom: -3rem;
   }
 
   .user {
