--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -11,11 +11,13 @@
   flex-direction: column;
   position: relative;
   margin-top: 2rem;
+  top: 3rem;
 }
 .awesome > :nth-child(1) {
     color: var(--block);
     font-size: 2.5rem;
     font-weight: bold;
+    margin-top: 1rem;
 }
 .awesome > :nth-child(2) {
     color: var(--orange);
@@ -37,6 +39,7 @@
 }
 .cards>*{
     position: absolute;
+    margin-left: 10rem;
 }
 .s-blur2{
     top: 8rem;
@@ -49,11 +52,12 @@
 
 @media screen and (max-width: 480px) {
     .services {
-        margin-top: 0;
+        margin-top: 6rem;
         flex-direction: column;
         gap: 5rem;
         height: 66rem;
         padding: 0;
+        margin-bottom: 20rem;
     }
 
     .cards {
